SERVER-50697 Do not enforce fast count on 'config.system.indexBuilds'